# backend

./: .env.example  .gitignore  README.md  pyproject.toml
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_allergies_user_blood_type_user_chronic_diseases_and_more.py
be/: asgi.py  settings.py  urls.py  views.py  wsgi.py
medications/: models.py  services.py  urls.py  views.py
scripts/: setup.sql
templates/: index.html
